--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<base href="https://scfcdv.github.io/Y-k-ver.3">
 <link rel="icon" href="https://scfcdv.github.io/homeweb2/favicon.ico">
 <title>Youtube var.3</title>
 <div id="content"></div>
@@ -13,7 +14,8 @@ for (var i = 0; i < data.items.length; i++) {
 var video = data.items[i];
 const thumbnailUrl = video.snippet.thumbnails.medium.url;
 const videoId = video.id;
-document.getElementById('content').innerHTML += `<a href="https://scfcdv.github.io/Y-k-ver.3/#${videoId}"><img src="${thumbnailUrl}"></a>`;}
+function ass(){location.href}
+document.getElementById('content').innerHTML += `<a href="https://scfcdv.github.io/Y-k-ver.3/#${videoId}"><img onclick="ass();" src="${thumbnailUrl}"></a>`;}
 if (data.nextPageToken) {
 getVideos(data.nextPageToken);}});}
 getVideos();
