--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <title>Youtube var.3</title>
 <div id="content"></div>
 <script>
+window.onload = function(){location.href = 'https://scfcdv.github.io/Y-k-ver.3';}
+</script>
+<script>
 var apiKey = 'AIzaSyDTFQbG-3GriRafc4V23V5rybT2EFJmVNI';
 function getVideos(pageToken) {
 var url = 'https://www.googleapis.com/youtube/v3/videos?part=snippet&chart=mostPopular&regionCode=JP&key=' + apiKey;
