--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <title>Youtube var.3</title>
 <div id="content"></div>
 <script>
-window.onload = function(){location.href = 'https://scfcdv.github.io/Y-k-ver.3';}
+window.onload = function() {
+if(window.location.href.indexOf('#') > -1) {ass();}}
+function ass() {
+location.href = 'https://scfcdv.github.io/Y-k-ver.3';}
 </script>
 <script>
 var apiKey = 'AIzaSyDTFQbG-3GriRafc4V23V5rybT2EFJmVNI';
