--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <div id="content"></div>
 <script>
 window.onload = function() {
-if(window.location.href.indexOf('#') > -1) {ass();}}
+if(window.location.href.indexOf('#')) {ass();}}
 function ass() {
 location.href = 'https://scfcdv.github.io/Y-k-ver.3';}
 </script>
