--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <div id="content"></div>
 <script>
 window.onload = function() {
-if(window.location.hash) {ass();}}
-function ass() {
+if(window.location.hash) {asss();}}
+function asss() {
 location.href = 'https://scfcdv.github.io/Y-k-ver.3';}
 </script>
 <script>
