--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ location.href = 'https://scfcdv.github.io/Y-k-ver.3/#${videoId}';
 var hash = location.hash;
 var hash = hash.replace('#', '');
 }
-document.getElementById('content').innerHTML += `<a><img onclick="ass();" src="${thumbnailUrl}"></a>`;}
+document.getElementById('content').innerHTML += `<a onclick="ass();"><img src="${thumbnailUrl}"></a>`;}
 if (data.nextPageToken) {
 getVideos(data.nextPageToken);}});}
 getVideos();
