--- a/index.html
+++ b/index.html
@@ -4,18 +4,9 @@
 <div id="content"></div>
 <script>
 window.onload = function() {
-if(window.location.hash) {asss();}}
-function asss() {
-location.href = 'https://scfcdv.github.io/Y-k-ver.3';}
-</script>
-<script>
-window.onload = function() {
-setTimeout(function() {
-if(window.location.href.indexOf('#') != -1) {
-asssa();}}, 1000);}
+if(window.location.href.indexOf('#') > -1) {asssa();}}
 function asssa() {
-document.getElementById('content').style.display = 'none'
-}
+document.getElementById('content').style.display = 'none'}
 </script>
 <script>
 var apiKey = 'AIzaSyDTFQbG-3GriRafc4V23V5rybT2EFJmVNI';
