--- a/index.html
+++ b/index.html
@@ -3,17 +3,8 @@
 <title>Youtube var.3</title>
 <div id="content"></div>
 <script>
-        function myFunction() {
-            console.log("関数が実行されました。");
-            // ここに実行したいコードを追加します。
-        }
-
-        // 1000ミリ秒（1秒）ごとにmyFunctionを呼び出す
-        setInterval(myFunction, 1000);
-
-
-  
-window.onload = function() {
+window.onload = function() {setInterval(asssa, 1000);}
+function asssa() {
 if(window.location.href.indexOf('#') > -1) {asssa();}}
 function asssa() {
 document.getElementById('content').style.display = 'none'}
