--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ window.onload = function() {setInterval(asssa, 1000);}
 function asssa() {
 if(window.location.href.indexOf('#') > -1) {asssa();}}
 function asssa() {
-document.getElementById('content').style.display = 'none'}
+document.getElementById('content').style.visibility = 'hidden'}
 </script>
 <script>
 var apiKey = 'AIzaSyDTFQbG-3GriRafc4V23V5rybT2EFJmVNI';
