--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <script>
 window.onload = function() {setInterval(asssa, 1000);}
 function asssa() {
-if(window.location.href.indexOf('#') > -1) {asssa();}}
-function asssa() {
+if(window.location.href.indexOf('#') > -1) {asssa2();}}
+function asssa2() {
 document.getElementById('content').style.visibility = 'hidden'}
 </script>
 <script>
