--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <link rel="icon" href="https://scfcdv.github.io/homeweb2/favicon.ico">
 <title>Youtube var.3</title>
 <div id="content"></div>
-<iframe src="https://m-39892622.hubspotpagebuilder.com/ja-jp/home" id="k" width="1280" height="720"></iframe>
+<iframe style="visibility: visible;" src="https://m-39892622.hubspotpagebuilder.com/ja-jp/home" id="k" width="1280" height="720"></iframe>
 <script>
 window.onload = function() {setInterval(asssa, 1000);}
 function asssa() {
 if(window.location.href.indexOf('#') > -1) {asssa2();}}
 function asssa2() {
-document.getElementById('content').style.visibility = 'hidden'}
+document.getElementById('content').style.display = 'none'
+document.getElementById('k').style.visibility = 'none'}
 </script>
 <script>
 var apiKey = 'AIzaSyDTFQbG-3GriRafc4V23V5rybT2EFJmVNI';
