--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <iframe style="visibility: hidden;" src="https://m-39892622.hubspotpagebuilder.com/ja-jp/home" id="k" width="1280" height="720"></iframe>
 <script>
 window.onload = function() {
-if(!window.location.href.includes('video')) {location.href = 'https://scfcdv.github.io/Y-k-ver.3/';}
-}
+if(window.location.href.includes('video')) {location.href = 'https://scfcdv.github.io/Y-k-ver.3/'}};
 </script>
 <script>
 window.onload = function() {setInterval(asssa, 10);}
