--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@ location.href = "https://scfcdv.github.io/Y-k-ver.3/#video-" + hash2;
 document.getElementById("k").src = hash2;
 document.getElementById('content').style.display = 'none'
 document.getElementById('k').style.visibility = 'visible'
-var videoId = hash;
+var apiKey = 'AIzaSyDTFQbG-3GriRafc4V23V5rybT2EFJmVNI';
+var videoIdqq = hash;
 var apiUrl = 'https://www.googleapis.com/youtube/v3/commentThreads?key=' + apiKey +
-'&videoId=' + videoId + '&part=snippet';
+'&videoId=' + videoIdqq + '&part=snippet';
 $.get(apiUrl, function(data) {
 var commentSection = document.getElementById('commentSection');
 commentSection.innerHTML = '';
