--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <base href="https://scfcdv.github.io/Y-k-ver.3">
 <link rel="icon" href="https://scfcdv.github.io/homeweb2/favicon.ico">
+<style>
+* {margin: 0;
+padding: 0;
+border: 0;
+overflow: hidden;}
+iframe {
+border:none;
+width:100%;
+height:100%;}
+</style>
 <title>Youtube var.3</title>
 <div id="content"></div>
 <iframe style="visibility: hidden;" src="https://m-39892622.hubspotpagebuilder.com/ja-jp/home" id="k" width="1280" height="720"></iframe>
