--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@ document.getElementById("k").src = hash2;
 document.getElementById('content').style.display = 'none'
 document.getElementById('k').style.visibility = 'visible'
 var apiKey = 'AIzaSyDTFQbG-3GriRafc4V23V5rybT2EFJmVNI';
-var videoIdqq = hash;
 var apiUrl = 'https://www.googleapis.com/youtube/v3/commentThreads?key=' + apiKey +
-'&videoId=' + videoIdqq + '&part=snippet';
+'&videoId=' + hash + '&part=snippet';
 $.get(apiUrl, function(data) {
 var commentSection = document.getElementById('commentSection');
 commentSection.innerHTML = '';
