--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <style>
 * {margin: 0;
 padding: 0;
-border: 0;
-overflow: hidden;}
+border: 0;}
 </style>
 <title>Youtube var.3</title>
 <div id="content"></div>
