--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ document.getElementById('k').style.visibility = 'visible'
 var apiKey = 'AIzaSyDTFQbG-3GriRafc4V23V5rybT2EFJmVNI';
 var hash = location.hash;
 var hash = hash.replace('#', '');
+var hash = hash.replace('video-https://www.youtube.com/embed/', '');
 var apiUrl = 'https://www.googleapis.com/youtube/v3/commentThreads?key=' + apiKey +
 '&videoId=' + hash + '&part=snippet';
 $.get(apiUrl, function(data) {
