--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@ document.getElementById("k").src = hash2;
 document.getElementById('content').style.display = 'none'
 document.getElementById('k').style.visibility = 'visible'
 var apiKey = 'AIzaSyDTFQbG-3GriRafc4V23V5rybT2EFJmVNI';
-var hash = location.hash;
-var hash = hash.replace('#', '');
-var hash = hash.replace('video-https://www.youtube.com/embed/', '');
+var hash3 = location.hash;
+var hash3 = hash.replace('#', '');
+var hash3 = hash.replace('video-https://www.youtube.com/embed/', '');
 var apiUrl = 'https://www.googleapis.com/youtube/v3/commentThreads?key=' + apiKey +
-'&videoId=' + hash + '&part=snippet';
+'&videoId=' + hash3 + '&part=snippet';
 $.get(apiUrl, function(data) {
 var commentSection = document.getElementById('commentSection');
 commentSection.innerHTML = '';
