--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ padding: 0;
 border: 0;}
 </style>
 <title>Youtube var.3</title>
-<div id="comments"></div>
+<div id="content"></div>
 <iframe style="visibility: hidden;" src="https://m-39892622.hubspotpagebuilder.com/ja-jp/home" id="k" width="1280" height="720"></iframe>
-<div id="commentSection"></div>
+<div id="comments"></div>
 <script>
 window.onload = function() {if(window.location.href.includes('video')) {location.href = 'https://scfcdv.github.io/Y-k-ver.3/'}};
 </script>
